# mmeval-lab

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mmevallab.yaml  pyproject.toml
.beads/: issues.jsonl
.github/: CODEOWNERS
.github/workflows/: ci.yml
configs/: mmmu_smoke.yaml  omnidocbench_smoke.yaml  videomme_smoke.yaml
demo/: README.md  generate_fixtures.py  run_demo.py
demo/fixtures/: mmmu_samples.json  training_manifest.jsonl
demo/outputs/: baseline_metrics.json  evaluation_report.html
docs/: adding_components.md  quickstart.md
docs/benchmarks/: mmmu.md  omnidocbench.md  videomme.md
docs/schemas/: run_artifact.md  run_artifact.schema.json
mmevallab/: __init__.py  cli.py
mmevallab/attribution/: __init__.py  contamination_risk.py  delta.py  diff.py  failure_deltas.py  influence.py  sanity.py  similarity.py
mmevallab/benchmarks/: __init__.py  mmmu.py  mmmu_submission.py  omnidoc_schema.py  omnidoc_tasks.py  omnidocbench.py  pdf_render.py  subtitle_align.py  video_sampling.py  videomme.py
mmevallab/contamination/: __init__.py  fingerprint.py  manifest.py  minhash.py  pdq.py  scanner.py  tags.py  video_hash.py
mmevallab/core/: __init__.py  cache.py  cache_keys.py  datamodel.py  hashing.py  prompts.py  registry.py  repro.py  run_dir.py  schema.py
mmevallab/eval/: __init__.py  bootstrap.py  canonicalize.py  category_metrics.py  compare.py  distributed.py  example_diff.py  extraction.py  gates.py  (+10 more)
scripts/: import_beads.py  pre-commit-license-check
tests/: test_attribution_sanity.py  test_extraction.py  test_hashing.py  test_mmmu_integration.py  test_omnidocbench.py  test_subtitle_align.py
(+12 files in other folders)
